<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jordnötskoll</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_scan_again">Scanna igen </string>
    <string name="title_ok">OK</string>
    <string name="title_warning">Varning</string>
    <string name="title_watch_out">Se upp!</string>
    <string name="title_error">Fel</string>
    <string name="title_problem">Problem</string>
    <string name="text_contains_peanuts">Den här produkten innehåller jordnötter.</string>
    <string name="text_may_contain_peanuts">Den här produkten kan innehålla spår av jordnötter.</string>
    <string name="text_may_contain_nuts">Den här produkten kan innehålla spår av nötter.</string>
    <string name="text_peanuts">Den här produkten kan innehålla jordnötter.</string>
    <string name="text_no_peanuts">Den här produkten skall inte innehålla jordnötter.</string>
    <string name="text_read_more">Läs mer om produkten genom att&#160;</string>
    <string name="text_no_internet">Den här enheten har ej tillgång till internet.</string>
    <string name="text_check_connection">Var vänlig kolla er uppkoppling och försök sen igen.</string>
    <string name="text_product_not_found">Den här produkten kunde ej indentifieras.</string>
    <string name="text_visit">Besök&#160;</string>
    <string name="text_url">www.openfooddb.com</string>
    <string name="text_click_here">klicka här</string>
    <string name="text_more_info">&#160;för mer information.</string>
    <string name="text_dot">.</string>
    <string name="text_full">Besök www.openfooddb.com för mer information.</string>
    
</resources>