<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#FFFFFF">
    
    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_general"
        android:visibility="gone">
        
        <TextView
            android:id="@+id/general"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/text_check_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_check_connection"
        android:visibility="gone">
    </TextView>

    <LinearLayout
        android:id="@+id/layout_read_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_read_more">
        </TextView>

        <TextView
            android:id="@+id/click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/text_click_here">
        </TextView>
        
        <TextView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_dot">
        </TextView>
    </LinearLayout>
    
    <TextView
        android:id="@+id/text_more_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_full"
        android:layout_marginTop="20dp"
        android:visibility="gone">
    </TextView>
    
    <LinearLayout
        android:id="@+id/layout_scan_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:visibility="gone">

        <Button
            android:id="@+id/button_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scanna igen "
            android:drawableRight="@drawable/toolbar_find">
        </Button>
    </LinearLayout>
</LinearLayout>